# langstroth

./: .coveragerc  .gitignore  .gitreview  .jscsrc  .jshintignore  .jshintrc  .pre-commit-config.yaml  .project  .pydevproject  CLAUDE.md  MANIFEST.in  Makefile  README.rst  install.sh  install_uat.sh  local.patch  manage.py  requirements.txt  requirements_notes_macosx.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  dirs  install  langstroth.apache.conf  postinst  postrm  preinst  rules
docker/: Dockerfile  docker-run.sh
langstroth/: admin.py  apps.py  auth.py  defaults.py  django.wsgi  error.py  graphite.py  keystone.py  local_settings.py  middleware.py  models.py  nagios.py  sentry.py  settings.py  settings_example.py  settings_for_test.py  settings_selenium.py  settings_test.py  test_settings.py  urls.py  views.py  wsgi.py
langstroth/data/: README.txt  allocation_tree.json  avail.html  for_codes.json  status.html
langstroth/fixtures/: initial_data.json.example
langstroth/migrations/: 0001_initial.py
langstroth/nectar_allocations/: urls.py  views.py
langstroth/outages/: admin.py  api.py  apps.py  filters.py  forms.py  (+4 more)
nectar_allocations/: allocation.py  models.py  router.py  router_for_testing.py  sitemap.py  switch.py  test_router.py  tests.py  tests_db.py  tests_db_allocation.py  urls.py  views.py
nectar_status/: database_router.py  models.py  tests.py
server_config/: langstroth.conf
user_statistics/: settings.py  urls.py  views.py
utilities/: diff.py  file.py  gerrit-review.sh
(+135 files in other folders)
