[metadata]
name = langstroth
author = ARDC
author-email = coreservices@ardc.edu.au
summary = Status site for the Nectar Research Cloud
description-file = README.rst
home-page = https://github.com/NeCTAR-RC/langstroth
license = GPLv3
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    openstack
    status

