[metadata]
name = langstroth
author = ARDC
author_email = coreservices@ardc.edu.au
summary = Status site for the Nectar Research Cloud
description_file = README.rst
home_page = https://github.com/NeCTAR-RC/langstroth
license = GPLv3
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
keywords =
    openstack
    status

